@@ -59,7 +59,7 @@ zlib := yes
 
 # paths
 
-instdir   := /usr/local
+instdir   := /usr/local/sword
 
 bindir    := ${instdir}/bin
 libdir    := ${instdir}/lib
